<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ConnectFour</string>
    <string name="settings">Settings</string>
    <string name="draw">Draw!</string>

    <string name="player_red">Red</string>
    <string name="player_white">White</string>
    <string name="turn_red">Red\'s turn</string>
    <string name="turn_white">White\'s turn</string>
    <string name="winner">The Winner is:</string>

    <string name="prefs_about">About</string>
    <string name="prefs_board_size">Board Size</string>
    <string name="prefs_mode">Player Vs. CPU Mode</string>
    <string name="prefs_about_version_suffix">v</string>
    <string name="prefs_about_summery">Created by Itai Levin (Electric1447)</string>
    <string name="prefs_github_title">Github</string>
    <string name="prefs_github_summery">View the source code of the app</string>

    <string-array name="board_size_array">
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
    </string-array>

</resources>
